--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "ansi-to-react": "^6.0.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
